# linux-drill

./: .gitignore  .gitmodules  README.md  README.rst  bash_aliases  cmake  schedule_test.c  squid  vimrc
asm/: build1  callmaxofsix.c  do1  fibo.c  fibonacci_asm.s  hello.asm  hello32.asm  hello_arm.asm  hello_gnu.asm  maxofsix.s  write.c  write2.c
boost/: CMakeLists.txt  do1  gil1.cpp  gps.cpp  intersection1.cpp  intersection2.cpp  mat1.cpp  phone.cpp  poly.cpp  render.cpp  serial.cpp  today.cpp  token1.cpp  vector.cpp
bpftrace/: cm.bt  do1  example.py  execsnoop.bt  minimal.bpf.c  my_program.c  nanosleep.c  openat.c  sleepers.bt  trace_execve.c
bpftrace/bcc/: bpf_sys_openat.c  net_monitor.py  simple_tc.py  thread1.c  trace_fields.py  trace_perf_output.py  vfsreadlat.c  vfsreadlat.py
build-tools/cmake/Downstream/: CMakeLists.txt
build-tools/cmake/DownstreamComponents/: CMakeLists.txt
build-tools/cmake/Importing/: CMakeLists.txt
build-tools/cmake/Step1/: CMakeLists.txt
build-tools/cmake/Step11/MathFunctions/: CMakeLists.txt
build-tools/cmake/Step12/: CMakeLists.txt
build-tools/cmake/Step2/: CMakeLists.txt  tutorial.cxx
build-tools/cmake/Step2/MathFunctions/: MathFunctions.cxx
build-tools/cmake/Step3/: CMakeLists.txt
build-tools/cmake/Step3/MathFunctions/: CMakeLists.txt
build-tools/cmake/my_project/: CMakeLists.txt  sort.h
build-tools/meson/hello/: main.c  meson.build
build-tools/scons/: do1
c++/: do1  leak.cpp  ptr1.cpp  ptr2.cpp  ptr3.cpp  ptr4.cpp  typeinfo.cpp  vecimpl.cpp  vector.cpp
cgroup/: busy_thread_simple.c  cpulimit.c  do1  do2  malloc1.c  malloc2.c  mycgroup.service  reboot.c  unshare1.c  write.c
cmake/: do1
cmake/Complete/: CMakeLists.txt
cmake/Importing/: CMakeLists.txt
cmake/MyExe/: CMakeLists.txt  main.cxx
cmake/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake/Step10/: CMakeLists.txt
cmake/Step11/: CMakeLists.txt
cmake/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  MathFunctions.h  mysqrt.h
cmake/Step3/: CMakeLists.txt
cmake/Step3/MathFunctions/: CMakeLists.txt
cmake/Step4/: CMakeLists.txt  script.cmake
cmake/Step8/MathFunctions/: CMakeLists.txt  MakeTable.cmake  MakeTable.cxx
debugging/: breakpoint.c  do1  do4  tracee_break.c  tracee_hello.asm  tracer2.c  tracer3.c  tracer4.c
dtrace-toolkit/: dexplorer  iotop  statsnoop
ebpf/: do1  hello.py  hello2.py  my_bpf_program.c  tcpv4connect.py
fftw/: complex_addition.c  complex_type.c  dft.c  do1  fft1.c  fft1.plot  fft2.c  fft2.plot  fft3.c  fft3.plot  fftw_example.c  inverse_fft.c
gem5/: do1  hello.c  run_hello.py  run_simple.py  simple2.py  simple3.py  simple4.py  x86board_se.py
go-lang/: constants.go  do1  exercise-fibonacci-closure.go  function-closures.go  imports.go  named-results.go  numeric-constrants.go  slices-of-slice.go  slices-pointers.go  type-inference.go  variables-with-initializers.go  variables.go
jacobi/: do1  ex1.py  jacobi1.py  matmul.c
kernel/: hello.c  smi.asm
linux/: cosine.c  dlmain.c  do1  do2  do3  do4  do5  do6  fibonacci.c  getcpu.c  test_gcov.c  test_gprof.c  test_gprof_new.c  traced_helloworld.c  tracee_break32.asm  tracer1.c  tracer3.c  tracer4.c
llvm/: average_main.cpp  baz.dot  def.kal  do1  ex1.c  ex1.ll  ex4.c  ex4.s.clang18  ex4.s.gcc13  fib.kal  fib.ks  fibi.kal  helloworld.c  helloworld.ll  if.kal  mandelbrot.kal  star.c  star.h  star.kal  star.ll  test-ast.cc  toy.cpp  tut1.cpp  tut2-test.kal  tut2.cpp  tut3.cpp  tut4.cpp  tut5.cpp  tut6.cpp  tut7-test.bc  tut7-test.kal  tut7-test.ll  tut7.cpp  tut8.cpp  tut9.cpp
lxc/: do1  lxcstart.c  lxctest.c
meson/: do1
mpi/: do1  hello.c
msr-tools/: config.h  configure.ac  memo
namespace/: clone1.c  clone2.c  setns1.c  unshare2.c  utsname.c
ns/: 2.tcl  3.tcl  4.tcl  5.tcl  example1.tcl  my.tcl
nvhpc/: do1
openacc/: acc1.c  do1  do2  fft2.c  fft2acc.c  fft2mp.c  get_device_type.c  gv1.c  hello_openmp.c  laplace.c  matmul.c  matmulacc.c  testnvc.c  vecadd.c  vecadd2.c
openmp/: .gdbinit  deadlock.c  do1  dynamic.c  errors.h  gomp_version.c  hello_omp.c  jacobi.py  loop.c  matmul.c  mutex3.c  par1.c  par1b.c  par2.c  par2a.c  par3.c  parallel_pi.c  private.c  private2.c  private3.c  private3b.c  private4.c  privateX.c  privateY.c  rdtsc.h  reduction.c  sched1.c  sched2.c  scope.c  serial_pi.c  share1.c  share2.c  share3.c  share3.f90  signalwait.c  tasks.c  test1.c  thread1.c  thread2.c  thread3.c  (+6 more)
opti/: do1  vec.c  vec1.c  vec2.c
perf/: do1  perf_example.c
profile/: do1  main.c  test_gprof.c
python/: atexit1.py  curses1.py  curses2.py  getattr1.py  itertools1.py  logger1.py  tqdm1.py
riscv/: do1
rocm/: a.hip  allany.hip  atomic1.hip  atomic2.hip  atomic3.hip  b.hip  ballot.hip  bandwidth.hip  copy.hip  copypeer.hip  do1  event.hip  graph-sample-n100.txt  graph-sample-n1024.txt  graph-sample-n20.txt  graph-sample-n30.txt  graph-sample-n50.txt  graph1.cpp  graph1.txt  graph2.hip  graph2.txt  graph_gen.py  hello.cpp  hellokernel.hip  hipPrintfKernel.cpp  hip_device_attributes.cpp  hip_hello.cpp  launchkernel.hip  launchkernel2.hip  loop_matvec.py  loop_saxpy2.py  managed.hip  managed2.hip  managed_matmul.hip  matrix_mul.cpp  matvec.hip  memcopy.hip  pattern.cpp  pattern1.cpp  pattern2.cpp  (+21 more)
rust/: factorial.rs  for1.rs  hello.rs  let3.rs  ref1.rs  ref2.rs  shadow2.rs  sizeof.rs  typeof.rs  var1.rs
shared/: do1  foo.c  mallochook.c  mallocmain.c
shm/: do1  ftok.c  shm_read.c  shm_write.c
simd/: add1.c  amx1.c  amx2.c  amx3.c  amx4.c  amx5.c  amx6.c  amxtile.c  average.c  bf16ex.c  bfloatsum.c  compare.c  compare2.c  cpuid.c  do  do1  do2  do3  do4  hello_avx.c  inline2.c  inline3.c  mmsize.c  ops.c  opsth.c  signzero.c  sleeptime.c  test.php  vecadd.c  vnni.c  vpaddd.cpp  vpdpwssd.cpp  vpmaddwd.cpp
sympy/: 1.py  2.py  3.py  sy1.py  sy2.py  sy3.py
systemd/: do1  my-server.service  my_server.py  mytimer.service  mytimer.sh  mytimer.timer  override.conf
thread/: alarm_threads.c  do1  do2  hello_omp.c  mutex1.c  mutex1a.c  mutex2.c  procon.c  rdtsc.c  rwlock.c  serial_pi.c  thread3.c  thread4.c  thread_example2.c
(+246 files in other folders)
